--- a/notable/templates/layout.html
+++ b/notable/templates/layout.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
         {% if title %}
             <title> Notable - {{ title }}</title>
         {% else %} 
@@ -12,9 +13,60 @@
     </head>
 
     <body>
-        {% block content %}
-        {% endblock %}
+        <header class="site-header">
+			<nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+			  <div class="container">
+				<a class="navbar-brand mr-4" href="/">Notable</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+				  <span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarToggle">
+				  <div class="navbar-nav mr-auto">
+					<a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+				  </div>
+				  <!-- Navbar Right Side -->
+				  <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+					<a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+				  </div>
+				</div>
+			  </div>
+			</nav>
+		  </header>
+          <main role="main" class="container">
+			<div class="row">
+			  <div class="col-md-8">
+				{% with messages = get_flashed_messages(with_categories=true)  %}
+					{% if messages %}
+						{% for category, message in messages %}
+							<div class="alert alert-{{ category }}">
+								{{ message }}
+							</div>
+						{% endfor %}
+					{% endif %}
+				{% endwith %}
+				{% block content %}{% endblock %}
+			  </div>
+			  <div class="col-md-4">
+				<div class="content-section">
+				  <h3>Our Sidebar</h3>
+				  <p class='text-muted'>You can put any information here you'd like.
+					<ul class="list-group">
+					  <li class="list-group-item list-group-item-light">Pinned Notes</li>
+					  <li class="list-group-item list-group-item-light">Latest Reports</li>
+					  <li class="list-group-item list-group-item-light">Reminders</li>
+					  <li class="list-group-item list-group-item-light">etc</li>
+					</ul>
+				  </p>
+				</div>
+			  </div>
+			</div>
+		  </main>
+        
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script> 
+        <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
     </body>
 </html>
