--- a/notable/templates/register.html
+++ b/notable/templates/register.html
@@ -1,6 +1,44 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Registration</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
-</html>
+</html> -->
+
+{% extends "layout.html" %}
+{% block content %}
+    <div class="content-section">
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Create an Account</legend>
+                <div class="form-group">
+                    {{ form.firstName.label(class="form-control-label") }}
+                    {{ form.firstName(class="form-control form-control-lg") }}
+                </div>
+                <div class="form-group">
+                    {{ form.lastName.label(class="form-control-label") }}
+                    {{ form.lastName(class="form-control form-control-lg") }}
+                </div>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                    {{ form.email(class="form-control form-control-lg") }}
+                </div>
+                <div class="form-group">
+                    {{ form.password.label(class="form-control-label") }}
+                    {{ form.password(class="form-control form-control-lg") }}
+                </div>
+                <div class="form-group">
+                    {{ form.confirmPassword.label(class="form-control-label") }}
+                    {{ form.confirmPassword(class="form-control form-control-lg") }}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+            </form>
+            <div class="border-top pt-3">
+                <small class="text-muted">
+                    Already Have an Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
+            </div>
+    </div>
+{% endblock %}
