--- a/notable/templates/layout.html
+++ b/notable/templates/layout.html
@@ -47,7 +47,7 @@
 				{% endwith %}
 				{% block content %}{% endblock %}
 			  </div>
-			  <div class="col-md-4">
+			  <!-- <div class="col-md-4">
 				<div class="content-section">
 				  <h3>Our Sidebar</h3>
 				  <p class='text-muted'>You can put any information here you'd like.
@@ -60,7 +60,7 @@
 				  </p>
 				</div>
 			  </div>
-			</div>
+			</div> -->
 		  </main>
         
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
