--- a/notable/templates/layout.html
+++ b/notable/templates/layout.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
         {% if title %}
             <title> Notable - {{ title }}</title>
         {% else %} 
@@ -12,8 +13,42 @@
     </head>
 
     <body>
-        {% block content %}
-        {% endblock %}
+        <header class="site-header">
+			<nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+			  <div class="container">
+				<a class="navbar-brand mr-4" href="/">Notable</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
+				  <span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarToggle">
+				  <div class="navbar-nav mr-auto">
+					<a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
+				  </div>
+				  <!-- Navbar Right Side -->
+				  <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+					<a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+				  </div>
+				</div>
+			  </div>
+			</nav>
+		  </header>
+          <main role="main" class="container">
+			<div class="row">
+			  <div class="col-md-8">
+				{% with messages = get_flashed_messages(with_categories=true)  %}
+					{% if messages %}
+						{% for category, message in messages %}
+							<div class="alert alert-{{ category }}">
+								{{ message }}
+							</div>
+						{% endfor %}
+					{% endif %}
+				{% endwith %}
+				{% block content %}{% endblock %}
+			  </div>
+		  </main>
+        
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script> 
     </body>
