--- a/notable/templates/login.html
+++ b/notable/templates/login.html
@@ -1,5 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Login</title>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+    <div class="content-section">
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Login to Your Account</legend>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                    {{ form.email(class="form-control form-control-lg") }}
+                </div>
+                <div class="form-group">
+                    {{ form.password.label(class="form-control-label") }}
+                    {{ form.password(class="form-control form-control-lg") }}
+                </div>
+                <div class="form-group">
+                    {{ form.confirmPassword.label(class="form-control-label") }}
+                    {{ form.confirmPassword(class="form-control form-control-lg") }}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+            </form>
+            <div class="border-top pt-3">
+                <small class="text-muted">
+                    Don't Have an Account? <a class="ml-2" href="{{ url_for('register') }}">Sign In</a>
+            </div>
+    </div>
+{% endblock %}
