--- a/notable/templates/login.html
+++ b/notable/templates/login.html
@@ -10,15 +10,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Create an Account</legend>
-                <div class="form-group">
-                    {{ form.firstName.label(class="form-control-label") }}
-                    {{ form.firstName(class="form-control form-control-lg") }}
-                </div>
-                <div class="form-group">
-                    {{ form.lastName.label(class="form-control-label") }}
-                    {{ form.lastName(class="form-control form-control-lg") }}
-                </div>
+                <legend class="border-bottom mb-4">Sign in to your Account</legend>
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
                     {{ form.email(class="form-control form-control-lg") }}
@@ -27,10 +19,6 @@
                     {{ form.password.label(class="form-control-label") }}
                     {{ form.password(class="form-control form-control-lg") }}
                 </div>
-                <div class="form-group">
-                    {{ form.confirmPassword.label(class="form-control-label") }}
-                    {{ form.confirmPassword(class="form-control form-control-lg") }}
-                </div>
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
@@ -38,7 +26,7 @@
             </form>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                    Already Have an Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
+                    Don't Have an Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up</a>
             </div>
     </div>
 {% endblock %}
