--- a/notable/templates/login.html
+++ b/notable/templates/login.html
@@ -1,4 +1,9 @@
 {% extends "layout.html" %}
+
+{% block col_length %}
+<div class="col-md-8">
+{% endblock col_length %}
+
 {% block content %}
     <div class="content-section">
         <form method="POST" action="">
@@ -13,18 +18,14 @@
                     {{ form.password.label(class="form-control-label") }}
                     {{ form.password(class="form-control form-control-lg") }}
                 </div>
-                <div class="form-group">
-                    {{ form.confirmPassword.label(class="form-control-label") }}
-                    {{ form.confirmPassword(class="form-control form-control-lg") }}
-                </div>
             </fieldset>
-            <div class="form-group">
+            <div class="form-group submit">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
             </form>
             <div class="border-top pt-3">
                 <small class="text-muted">
-                    Don't Have an Account? <a class="ml-2" href="{{ url_for('register') }}">Sign In</a>
+                    Don't Have an Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up</a>
             </div>
     </div>
 {% endblock %}
