--- a/notable/templates/register.html
+++ b/notable/templates/register.html
@@ -5,6 +5,11 @@
 </html> -->
 
 {% extends "layout.html" %}
+
+{% block col_length %}
+<div class="col-md-8">
+{% endblock col_length %}
+
 {% block content %}
     <div class="content-section">
         <form method="POST" action="">
@@ -32,7 +37,7 @@
                     {{ form.confirmPassword(class="form-control form-control-lg") }}
                 </div>
             </fieldset>
-            <div class="form-group">
+            <div class="form-group submit">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
             </form>
