--- a/notable/templates/register.html
+++ b/notable/templates/register.html
@@ -1,9 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <title>Registration</title>
-</html> -->
-
 {% extends "layout.html" %}
 
 {% block col_length %}
@@ -14,27 +8,85 @@
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
+
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Create an Account</legend>
+
+                <!-- First Name -->
                 <div class="form-group">
                     {{ form.firstName.label(class="form-control-label") }}
-                    {{ form.firstName(class="form-control form-control-lg") }}
+
+                    {% if form.firstName.errors %}
+                        {{ form.firstName.label(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.firstName.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.firstName(class="form-control form-control-lg") }}    
+                    {% endif %}
+                    
                 </div>
+
+                <!-- Last Name -->
                 <div class="form-group">
                     {{ form.lastName.label(class="form-control-label") }}
-                    {{ form.lastName(class="form-control form-control-lg") }}
+                
+                    {% if form.lastName.errors %}
+                        {{ form.lastName(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.lastName.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.lastName(class="form-control form-control-lg") }}    
+                    {% endif %}
                 </div>
+
+                <!-- Email -->
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
-                    {{ form.email(class="form-control form-control-lg") }}
+                
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}    
+                    {% endif %}
                 </div>
                 <div class="form-group">
                     {{ form.password.label(class="form-control-label") }}
-                    {{ form.password(class="form-control form-control-lg") }}
+                    
+                    {% if form.password.errors %}
+                        {{ form.password(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.password.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.password(class="form-control form-control-lg") }}    
+                    {% endif %}
                 </div>
                 <div class="form-group">
                     {{ form.confirmPassword.label(class="form-control-label") }}
-                    {{ form.confirmPassword(class="form-control form-control-lg") }}
+                    
+                    {% if form.confirmPassword.errors %}
+                        {{ form.confirmPassword(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.confirmPassword.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.confirmPassword(class="form-control form-control-lg") }}    
+                    {% endif %}
                 </div>
             </fieldset>
             <div class="form-group submit">
