--- a/notable/templates/login.html
+++ b/notable/templates/login.html
@@ -8,22 +8,62 @@
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
+
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Login to Your Account</legend>
+        
+                <!-- Email -->
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
-                    {{ form.email(class="form-control form-control-lg") }}
+                
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}    
+                    {% endif %}
                 </div>
+
+                <!-- Password -->
                 <div class="form-group">
                     {{ form.password.label(class="form-control-label") }}
-                    {{ form.password(class="form-control form-control-lg") }}
+                    
+                    {% if form.password.errors %}
+                        {{ form.password(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.password.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.password(class="form-control form-control-lg") }}    
+                    {% endif %}
                 </div>
+
+                <!-- Remember me -->
+                 <div class="form-check mt-4">
+                    {{ form.remember(class="form-check-input")}}
+                    <small class="text-muted">
+                        {{ form.remember.label(class="form-check-label")}}</small>
+                 </div>
             </fieldset>
+
+            <!-- Submit -->
             <div class="form-group submit">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
+
+            <!-- Forgot password -->
+            <small class="text-muted ml-2">
+                <a href="#">Forgot Password?</a>
+            </small>
             </form>
-            <div class="border-top pt-3">
+
+            <div class="border-top pt-4">
                 <small class="text-muted">
                     Don't Have an Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up</a>
             </div>
