--- a/notable/templates/layout.html
+++ b/notable/templates/layout.html
@@ -2,9 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+
         {% if title %}
             <title> Notable - {{ title }}</title>
         {% else %} 
@@ -26,8 +30,13 @@
 				  </div>
 				  <!-- Navbar Right Side -->
 				  <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-					<a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+					<a class="nav-item nav-link" href="{{ url_for('profile') }}">Account</a>
+					{% if current_user.is_authenticated %}
+						<a class="nav-item nav-link" href="{{ url_for('logout') }}">Log Out</a>
+					{% else %}
+						<a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+						<a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+					{% endif %}
 				  </div>
 				</div>
 			  </div>
@@ -36,7 +45,7 @@
           <main role="main" class="container notearea">
 			<div class="row">
 				{% block col_length %}
-				<div class="col-md-12">
+				<div class="col-md-8">
 				{% endblock %}
 
 					{% with messages = get_flashed_messages(with_categories=true)  %}
@@ -53,9 +62,28 @@
 					<!-- Page specific content -->
 					{% endblock %}
 			  </div>
+
+			<!-- <div class="col-md-4">
+				  <div class="content-section">
+					<h3>Our Sidebar</h3>
+					<p class='text-muted'>You can put any information here you'd like.
+						  <ul class="list-group">
+							<li class="list-group-item list-group-item-light">Latest Posts</li>
+							<li class="list-group-item list-group-item-light">Announcements</li>
+							<li class="list-group-item list-group-item-light">Calendars</li>
+							<li class="list-group-item list-group-item-light">etc</li>
+						  </ul>
+					</p>
+				  </div>
+				</div> -->
+				
+			</div>
 		  </main>
         
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script> 
+        <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>  -->
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
