--- a/notable/templates/login.html
+++ b/notable/templates/login.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 
-{% block col_length %}
+<!-- {% block col_length %}
 <div class="col-md-8">
-{% endblock col_length %}
+{% endblock col_length %} -->
 
 {% block content %}
     <div class="content-section">
