--- a/notable/templates/layout.html
+++ b/notable/templates/layout.html
@@ -30,7 +30,7 @@
 				  </div>
 				  <!-- Navbar Right Side -->
 				  <div class="navbar-nav">
-					<a class="nav-item nav-link" href="{{ url_for('profile') }}">Account</a>
+					<a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
 					{% if current_user.is_authenticated %}
 						<a class="nav-item nav-link" href="{{ url_for('logout') }}">Log Out</a>
 					{% else %}
