--- a/notable/templates/account.html
+++ b/notable/templates/account.html
@@ -9,6 +9,66 @@
         <p class="text-secondary"> {{ current_user.email }} </p>
       </div>
     </div>
-    <!-- FORM HERE -->
+
+    <!-- Update Account Form -->
+        <form method="POST" action="">
+            {{ form.hidden_tag() }}
+
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Account Info</legend>
+
+                <!-- First Name -->
+                <div class="form-group">
+                    {{ form.firstName.label(class="form-control-label") }}
+
+                    {% if form.firstName.errors %}
+                        {{ form.firstName.label(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.firstName.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.firstName(class="form-control form-control-lg") }}    
+                    {% endif %}
+                    
+                </div>
+
+                <!-- Last Name -->
+                <div class="form-group">
+                    {{ form.lastName.label(class="form-control-label") }}
+                
+                    {% if form.lastName.errors %}
+                        {{ form.lastName(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.lastName.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.lastName(class="form-control form-control-lg") }}    
+                    {% endif %}
+                </div>
+
+                <!-- Email -->
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                            <span> {{ error }} </span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}    
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group submit">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+            </form>
   </div>
 {% endblock content %}
