--- a/notable/templates/account.html
+++ b/notable/templates/account.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Update Account Form -->
-        <form method="POST" action="">
+        <form method="POST" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
 
             <fieldset class="form-group">
@@ -63,6 +63,17 @@
                         </div>
                     {% else %}
                         {{ form.email(class="form-control form-control-lg") }}    
+                    {% endif %}
+                </div>
+
+                <!-- Picture -->
+                <div class="form-group">
+                    {{ form.picture.label }}
+                    {{ form.picture(class="form-control-file")}}
+                    {% if form.picture.errors %}
+                        {% for error in form.picture.errors %}
+                            <span class="text-danger"> {{ error }} </span></br>
+                        {% endfor %}
                     {% endif %}
                 </div>
             </fieldset>
