--- a/notable/templates/create_note.html
+++ b/notable/templates/create_note.html
@@ -6,7 +6,7 @@
             {{ form.hidden_tag() }}
 
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">New Note</legend>
+                <legend class="border-bottom mb-4">{{ legend }}</legend>
         
                 <!-- Title -->
                 <div class="form-group">
