--- a/notable/templates/home.html
+++ b/notable/templates/home.html
@@ -2,18 +2,17 @@
 {% block content %}
 
 <ul class="notelist">
-    {% for allNote in allNotes %}
+    {% for note in notes %}
     <article class="media content-section">
 
             <div class="media-body">
                 {% if current_user.is_authenticated %}
                 <div class="article-metadata">
-                    <small class="text-muted"> {{ allNote.created_at.strftime('%Y-%m-%d') }} - </small>
-                    <small class="text-muted"> Last edited {{ allNote.updated_at.strftime('%a, %b %d %H:%M %p') }}</small>
+                    <small class="text-muted"> {{ note.created_at.strftime('%Y-%m-%d') }} </small>
                 </div>
                 {% endif %}
-            <h3><a class="article-title" href="#">{{ allNote.title }}</a></h3>
-            <p class="article-content">{{ allNote.body }}</p>
+            <h3><a class="article-title" href="{{ url_for('view_note', note_id=note.id) }}">{{ note.title }}</a></h3>
+            <p class="article-content">{{ note.body }}</p>
         </div>
     </article>
     {% endfor %}
