--- a/notable/templates/login.html
+++ b/notable/templates/login.html
@@ -59,7 +59,7 @@
 
             <!-- Forgot password -->
             <small class="text-muted ml-2">
-                <a href="#">Forgot Password?</a>
+                <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
             </small>
             </form>
         </div>
