--- a/notable/templates/note.html
+++ b/notable/templates/note.html
@@ -7,7 +7,7 @@
                     <small class="text-muted"> Last edited on {{ note.updated_at.strftime('%a, %b %d %H:%M %p') }}</small>
                     <!-- Add update and delete links -->
                      <div>
-                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('edit_note', note_id=note.id) }}"> Update </a>
+                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('notes.edit_note', note_id=note.id) }}"> Update </a>
                         <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal"> Delete </button>
                      </div>
                 </div>
@@ -32,7 +32,7 @@
             <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
-             <form action="{{ url_for('delete_note', note_id=note.id) }}" method="POST">
+             <form action="{{ url_for('notes.delete_note', note_id=note.id) }}" method="POST">
                 <input class="btn btn-danger" type="submit" value="Delete">
              </form>
             </div>
