--- a/notable/templates/note_report.html
+++ b/notable/templates/note_report.html
@@ -9,7 +9,7 @@
                         <small class="text-muted"> {{ note.created_at.strftime('%Y-%m-%d') }} </small>
                     </div>
                     {% endif %}
-                    <h3><a class="article-title" href="{{ url_for('view_note', note_id=note.id) }}">{{ note.title }}</a></h3>
+                    <h3><a class="article-title" href="{{ url_for('notes.view_note', note_id=note.id) }}">{{ note.title }}</a></h3>
                     <p class="article-content">{{ note.body }}</p>
                 </div>
         </article>
